[gd_scene load_steps=3 format=3 uid="uid://bcrkgtrvxd2wr"]

[ext_resource type="Script" uid="uid://cveqf7m3ej0rt" path="res://scripts/options.gd" id="1_5v8ap"]

[sub_resource type="AudioStream" id="AudioStream_prnvy"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = -658.0
offset_bottom = -344.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
script = ExtResource("1_5v8ap")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Vol" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("1_5v8ap")

[node name="Mute" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Mut_lab" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStream_prnvy")
volume_db = 0.145
pitch_scale = 1.89

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(191, 106)
zoom = Vector2(3, 3)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 31.0
grow_horizontal = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mut_lab" to="." method="_on_mut_lab_toggled"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
